--- a/NEW PROJECT SIMS/App.config
+++ b/NEW PROJECT SIMS/App.config
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="NEW_PROJECT_SIMS.Properties.Settings.simsConnectionString"
+            connectionString="Data Source=Hawksprey;Initial Catalog=sims;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
