--- a/NEW PROJECT SIMS/NEW PROJECT SIMS.csproj
+++ b/NEW PROJECT SIMS/NEW PROJECT SIMS.csproj
@@ -14,7 +14,7 @@
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>publish\</PublishUrl>
+    <PublishUrl>E:\downloads\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -24,7 +24,9 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ProductName>Project SIMS - School Inventory Management Systm</ProductName>
+    <SuiteName>Project SIMS</SuiteName>
+    <ApplicationRevision>3</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -221,15 +223,26 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="simsDataSet.cs">
+      <DependentUpon>simsDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="simsDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>simsDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="simsDataSet1.cs">
+      <DependentUpon>simsDataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="simsDataSet1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>simsDataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="simsDataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>simsDataSet2.xsd</DependentUpon>
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="var.cs" />
@@ -306,6 +319,9 @@
     <None Include="DataSet1.xsc">
       <DependentUpon>DataSet1.xsd</DependentUpon>
     </None>
+    <None Include="DataSet1.xsc">
+      <DependentUpon>DataSet1.xsd</DependentUpon>
+    </None>
     <None Include="DataSet1.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>DataSet1.Designer.cs</LastGenOutput>
@@ -328,10 +344,16 @@
     <None Include="simsDataSet.xsc">
       <DependentUpon>simsDataSet.xsd</DependentUpon>
     </None>
+    <None Include="simsDataSet.xsc">
+      <DependentUpon>simsDataSet.xsd</DependentUpon>
+    </None>
     <None Include="simsDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>simsDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+    </None>
+    <None Include="simsDataSet.xss">
+      <DependentUpon>simsDataSet.xsd</DependentUpon>
     </None>
     <None Include="simsDataSet.xss">
       <DependentUpon>simsDataSet.xsd</DependentUpon>
@@ -347,11 +369,33 @@
     <None Include="simsDataSet1.xss">
       <DependentUpon>simsDataSet1.xsd</DependentUpon>
     </None>
+    <None Include="simsDataSet2.xsc">
+      <DependentUpon>simsDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="simsDataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>simsDataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="simsDataSet2.xss">
+      <DependentUpon>simsDataSet2.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="sims.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="sims_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>sims.mdf</DependentUpon>
+    </Content>
+    <Content Include="sims_log.ldf">
+      <DependentUpon>sims.mdf</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -365,6 +409,13 @@
     <Content Include="SqlServerTypes\x86\SqlServerSpatial140.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.SqlServer.SqlLocalDB.15.0">
+      <Visible>False</Visible>
+      <ProductName>SQL Server 2019 Express LocalDB</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
