--- a/NEW PROJECT SIMS/Properties/Settings.settings
+++ b/NEW PROJECT SIMS/Properties/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="simsConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
-  &lt;ConnectionString&gt;Data Source=Hawksprey;Initial Catalog=sims;Integrated Security=True&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+  &lt;ConnectionString&gt;Data source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\sims.mdf;Integrated Security=True;Connect Timeout=30;App=EntityFramework"&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.EntityClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=Hawksprey;Initial Catalog=sims;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\sims.mdf;Integrated Security=True;Connect Timeout=30;App=EntityFramework"</Value>
     </Setting>
   </Settings>
 </SettingsFile>
